# alcheme

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  components.json  firestore.indexes.json  firestore.rules  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml  server.py  sessions.db
agent/alcheme/: agent.py  constants.py
agent/alcheme/agents/: alchemist.py  concierge.py  instructor.py  inventory.py  memory_keeper.py  product_search.py  profiler.py  simulator.py  tpo_tactician.py  trend_hunter.py
agent/alcheme/prompts/: alchemist.py  concierge.py  instructor.py  inventory.py  memory_keeper.py  product_search.py  profiler.py  simulator.py  theme_generator.py  tpo_tactician.py  trend_hunter.py
agent/alcheme/schemas/: inventory.py  recipe.py
agent/alcheme/tools/: beauty_log_tools.py  calendar_tools.py  catalog_tools.py  context_tools.py  instructor_tools.py  inventory_tools.py  profiler_tools.py  rakuten_api.py  recipe_tools.py  shopping_tools.py  simulator_tools.py  suggestion_tools.py  (+2 more)
agent/scripts/: seed_inventory.py
agent/tests/: conftest.py  test_calendar_tools.py  test_catalog_tools.py  test_hallucination.py  test_inventory_tools.py  test_profiler_tools.py  test_rakuten_api.py  test_recipe_tools.py  test_schemas.py  test_server.py  test_shopping_tools.py  test_simulator_prompts.py  test_simulator_tools.py  test_sse_extraction.py  test_theme_tools.py
(+443 files in other folders)
